--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -2,3 +2,38 @@ header.navbar.menu_home=Home
 header.navbar.menu_prices=Prices
 header.navbar.menu_add_price=Create Price
 header.navbar.menu_references=References
+header.navbar.dropdown_item1=Stock list
+header.navbar.dropdown_item2=Prices
+header.navbar.dropdown_item3=Units
+
+prices.title=List of Prices
+prices.add=Add price
+prices.h2=Prices List
+
+priceform.title=Add Prices
+
+unitform.title=Add Unit
+
+priceshow.title=Price Info
+priceshow.h2=Price Details
+unitshow.title=Unit Info
+unitshow.h2=Unit Details
+
+button.submit=Submit
+
+units.title=List of Units
+units.add=Add unit
+units.h2=Units List
+
+column.id=Id
+column.name=Name
+column.unit=Unit
+column.placeholder=Please select a unit
+
+column.view=View
+column.edit=Edit
+column.delete=Delete
+
+price.type=Price Type
+price.type.calculated=Calculated
+price.type.base=Base
