--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -2,3 +2,36 @@ header.navbar.menu_home=Домой
 header.navbar.menu_prices=Цены
 header.navbar.menu_add_price=Создать цену
 header.navbar.menu_references=Справочники
+header.navbar.dropdown_item1=Номенклатура
+header.navbar.dropdown_item2=Цены
+header.navbar.dropdown_item3=Еденицы измерения
+
+prices.title=Справочник: Цены
+prices.add=Добавить
+prices.h2=Цены
+
+priceform.title=Добавить цену в справочник
+unitform.title=Добавить еденицу измерения
+
+priceshow.title=Информация о цене
+priceshow.h2=Информация о цене
+unitshow.title=Информация по еденице измерения
+unitshow.h2=Информация по еденице измерения
+
+button.submit=Записать
+
+units.title=Справочник: Еденицы измерения
+units.add=Добавить
+units.h2=Еденицы измерения
+
+column.id=Ид
+column.name=Название
+column.unit=Ед. измерения
+column.placeholder=Выберите еденицы измерения
+column.view=Просмотр
+column.edit=Редактировать
+column.delete=Удалить
+
+price.type=Тип Цены
+price.type.calculated=Расчетная
+price.type.base=Базовая
