--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -37,3 +37,10 @@ column.delete=Delete
 price.type=Price Type
 price.type.calculated=Calculated
 price.type.base=Base
+
+login.title=Login Form
+login.error=Invalid username and password.
+login.logout=You have been logged out
+login.username=User Name :
+login.password=Password :
+login.button=Sign In
