--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -35,3 +35,10 @@ column.delete=Удалить
 price.type=Тип Цены
 price.type.calculated=Расчетная
 price.type.base=Базовая
+
+login.title=Вход
+login.error=Неверное имя пользователя или пароль.
+login.logout=Вы вышли.
+login.username=Имя пользователя :
+login.password=Пароль :
+login.button=Войти
