--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -16,8 +16,10 @@ unitform.title=Add Unit
 
 priceshow.title=Price Info
 priceshow.h2=Price Details
+priceshow.add=Add Price
 unitshow.title=Unit Info
 unitshow.h2=Unit Details
+unitshow.add=Add Unit
 
 button.submit=Submit
 
