--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -15,8 +15,10 @@ unitform.title=Добавить еденицу измерения
 
 priceshow.title=Информация о цене
 priceshow.h2=Информация о цене
+priceshow.add=Добавить цену
 unitshow.title=Информация по еденице измерения
 unitshow.h2=Информация по еденице измерения
+unitshow.add=Добавить еденицу измерения
 
 button.submit=Записать
 
