--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -30,7 +30,9 @@ units.h2=Units List
 column.id=Id
 column.name=Name
 column.unit=Unit
-column.placeholder=Please select a unit
+
+select.unit=Please select a unit
+select.base_price=Please select a base price
 
 column.view=View
 column.edit=Edit
@@ -38,11 +40,12 @@ column.delete=Delete
 
 price.type=Price Type
 price.type.calculated=Calculated
-price.type.base=Base
+price.type.base=Base price
+price.type_multipler=The percentage of the base price (%)
 
 login.title=Login Form
 login.error=Invalid username and password.
 login.logout=You have been logged out
-login.username=User Name :
-login.password=Password :
+login.username=User Name
+login.password=Password
 login.button=Sign In
