--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -29,18 +29,22 @@ units.h2=Еденицы измерения
 column.id=Ид
 column.name=Название
 column.unit=Ед. измерения
-column.placeholder=Выберите еденицы измерения
+
+select.unit=Выберите еденицы измерения
+select.base_price=Выберите базовою цену
+
 column.view=Просмотр
 column.edit=Редактировать
 column.delete=Удалить
 
 price.type=Тип Цены
 price.type.calculated=Расчетная
-price.type.base=Базовая
+price.type.base=Исходная цена
+price.type_multipler=Процент от базовой цены (%)
 
 login.title=Вход
 login.error=Неверное имя пользователя или пароль.
 login.logout=Вы вышли.
-login.username=Имя пользователя :
-login.password=Пароль :
+login.username=Имя пользователя
+login.password=Пароль
 login.button=Войти
