--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -39,7 +39,7 @@ column.delete=Удалить
 
 price.type=Тип Цены
 price.type.calculated=Расчетная
-price.type.base=Исходная цена
+price.type.base=Базовая цена
 price.type_multipler=Процент от базовой цены (%)
 
 login.title=Вход
