--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -10,7 +10,18 @@ prices.title=List of Prices
 prices.add=Add price
 prices.h2=Prices List
 
-priceform.title=Add Prices
+
+product.title=List of Products
+product.add=Add product
+productshow.title=Product Info
+productshow.h2=Product Details
+productform.title=Add Product
+productform.price=Price
+productform.prices=Prices
+
+
+
+priceform.title=Add Price
 
 unitform.title=Add Unit
 
@@ -32,6 +43,7 @@ column.name=Name
 column.unit=Unit
 
 select.unit=Please select a unit
+select.price=Please select a price
 select.base_price=Please select a base price
 
 column.view=View
@@ -48,4 +60,7 @@ login.error=Invalid username and password.
 login.logout=You have been logged out
 login.username=User Name
 login.password=Password
-login.button=Sign In
+login=Sign In
+logout=Log Out
+
+welcome=Welcome
