--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -10,6 +10,15 @@ prices.title=Справочник: Цены
 prices.add=Добавить
 prices.h2=Цены
 
+product.title=Справочник: Номенклатура
+product.add=Добавить номенклатуру
+productshow.title=Информация о номенклатуре
+productshow.h2=Информация о номенклатуре
+productform.title=Добавить номенклатуру
+productform.price=Цена
+productform.prices=Цены
+
+
 priceform.title=Добавить цену в справочник
 unitform.title=Добавить еденицу измерения
 
@@ -31,6 +40,7 @@ column.name=Название
 column.unit=Ед. измерения
 
 select.unit=Выберите еденицы измерения
+select.price=Выберите цену
 select.base_price=Выберите базовою цену
 
 column.view=Просмотр
@@ -47,4 +57,7 @@ login.error=Неверное имя пользователя или пароль
 login.logout=Вы вышли.
 login.username=Имя пользователя
 login.password=Пароль
-login.button=Войти
+login=Войти
+logout=Выйти
+
+welcome=Добро пожаловать
