--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -41,6 +41,7 @@ units.h2=Units List
 column.id=Id
 column.name=Name
 column.unit=Unit
+column.value=Price value
 
 select.unit=Please select a unit
 select.price=Please select a price
