--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -38,6 +38,7 @@ units.h2=Еденицы измерения
 column.id=Ид
 column.name=Название
 column.unit=Ед. измерения
+column.value=Значение цены
 
 select.unit=Выберите еденицы измерения
 select.price=Выберите цену
