--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -5,6 +5,7 @@ header.navbar.menu_references=References
 header.navbar.dropdown_item1=Stock list
 header.navbar.dropdown_item2=Prices
 header.navbar.dropdown_item3=Units
+header.navbar.dropdown_item4=Contractors
 
 prices.title=List of Prices
 prices.add=Add price
@@ -19,24 +20,26 @@ productform.title=Add Product
 productform.price=Price
 productform.prices=Prices
 
-
-
 priceform.title=Add Price
 
-unitform.title=Add Unit
+
 
 priceshow.title=Price Info
 priceshow.h2=Price Details
 priceshow.add=Add Price
 unitshow.title=Unit Info
+contractor.show.title=Contractor Info
 unitshow.h2=Unit Details
 unitshow.add=Add Unit
 
 button.submit=Submit
 
 units.title=List of Units
+contractors.title=List of Contractors
 units.add=Add unit
+contractors.add=Add contractor
 units.h2=Units List
+unitform.title=Add Unit
 
 column.id=Id
 column.name=Name
