--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -5,6 +5,7 @@ header.navbar.menu_references=Справочники
 header.navbar.dropdown_item1=Номенклатура
 header.navbar.dropdown_item2=Цены
 header.navbar.dropdown_item3=Еденицы измерения
+header.navbar.dropdown_item4=Контрагенты
 
 prices.title=Справочник: Цены
 prices.add=Добавить
@@ -26,13 +27,16 @@ priceshow.title=Информация о цене
 priceshow.h2=Информация о цене
 priceshow.add=Добавить цену
 unitshow.title=Информация по еденице измерения
+contractor.show.title=Информация по контрагенту
 unitshow.h2=Информация по еденице измерения
 unitshow.add=Добавить еденицу измерения
 
 button.submit=Записать
 
 units.title=Справочник: Еденицы измерения
+contractors.title=Справочник: Контрагенты
 units.add=Добавить
+contractors.add=Добавить
 units.h2=Еденицы измерения
 
 column.id=Ид
